@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-12T08:09:59Z",
+  "count" : 6,
+  "count_minmax" : [ 6, 6 ],
+  "count_prev_day_inc" : 6,
+  "count_prev_day_dec" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 0
+}
