@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-12T00:32:21Z",
+  "timestamp" : "2022-04-12T08:09:59Z",
   "count_outdated" : 727,
   "uniques_outdated" : 42,
-  "count" : 967,
-  "uniques" : 56,
+  "count" : 973,
+  "uniques" : 57,
   "views" : [
     {
       "timestamp": "2022-03-29T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 0, 8 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-12T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
