@@ -1,5 +1,5 @@
 {
-  "count": 240,
+  "count": 246,
   "uniques": 2,
   "views": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 8,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-12T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
